# sample_meds_model

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_binary_classification.py  simple_model.py
src/sample_ESDI_model/: simple_model.py
src/sample_ESDS_model/: run_binary_classification.py
